<resources>
    <string name="app_name">KidsLingo</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Početna</string>
    <string name="menu_settings">Postavke</string>
    <string name="menu_statistics">Statistika</string>
    <string name="menu_info">Info o igri</string>
    <string name="menu_game">Igra učenja</string>
    <string name="start_game">Započni igru</string>
    <string name="home_label">Pozdrav, %1$s!</string>
    <string name="level_1">Level 1</string>
    <string name="level_2">Level 2</string>
    <string name="level_3">Level 3</string>
    <string name="round_label">%1$s/%2$s</string>
    <string name="games_question_colors">Koja boja je na slici?</string>
    <string name="games_question_animals">Koja životinja je na slici?</string>
    <string name="games_question_food">Koju hrana je na slici?</string>
    <string name="games_question_object">Koji predmet je na na slici?</string>
    <string name="btn_check">Provjeri</string>
    <string name="btn_continue">Nastavi</string>
    <string name="correct_answer">Točan odgovor!</string>
    <string name="wrong_answer">Netočan odgovor!</string>
    <string name="correct_answer_preview">Točan odgovor: %1$s</string>
    <string name="level_election">Višestruki odabir</string>
    <string name="level_typing">Tipkanje</string>
    <string name="language_english">Engleski</string>
    <string name="language_french">Francuski</string>
    <string name="language_german">Njemački</string>
    <string name="language_italian">Talijanski</string>
    <string name="category_food">Hrana</string>
    <string name="category_colors">Boje</string>
    <string name="category_animals">Životinje</string>
    <string name="category_objects">Stvari</string>
    <string name="language">Jezik</string>
    <string name="category">Kategorija</string>
    <string name="level">Level</string>
    <string name="enter_name">Upiši svoje ime:</string>
    <string name="start">Kreni</string>
    <string name="results">Rezultati</string>
    <string name="results_score">%1$s/%2$s</string>
    <string name="good_message">Samo tako nastavi!</string>
    <string name="excellent_message">Bravo, sve točno!</string>
    <string name="average_message">Nemoj odustati, nastavi vježbati!</string>
    <string name="english_statistic">Statistika - Engleski</string>
    <string name="french_statistic">Statistika - Francuski</string>
    <string name="german_statistic">Statistika - Njemački</string>
    <string name="italian_statistic">Statistika - Talijanski</string>
    <string name="average_correct_answers">Prosječni broj točnih odgovora</string>
    <string name="average_solving_speed">Prosječna brzina rješavanja\n(u sekundama)</string>
    <string name="progress_statistics">Statistika napretka</string>
    <string name="elected">Višestruki odabir</string>
    <string name="typed">Tipkanje</string>
    <string name="no_data">Nema podataka za ovu kategoriju</string>
    <string name="legenda">Legenda</string>
</resources>
