<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="fer.digobr.kidslingo.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_nav_game"
            app:destination="@id/nav_game" />
    </fragment>

    <fragment
        android:id="@+id/nav_game"
        android:name="fer.digobr.kidslingo.ui.game.GameFragment"
        android:label="@string/menu_game"
        tools:layout="@layout/fragment_game" >
        <action
            android:id="@+id/action_nav_game_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>

    <fragment
        android:id="@+id/nav_settings"
        android:name="fer.digobr.kidslingo.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/nav_statistics"
        android:name="fer.digobr.kidslingo.ui.statistics.StatisticsFragment"
        android:label="@string/menu_statistics"
        tools:layout="@layout/fragment_statistics" />

    <fragment
        android:id="@+id/nav_info"
        android:name="fer.digobr.kidslingo.ui.gameinfo.GameInfoFragment"
        android:label="@string/menu_info"
        tools:layout="@layout/fragment_game_info" />
</navigation>
